# spacy-ru

./: pyproject.toml  server.sh
server/: server.py
