[tool.poetry]
name = "spacy-ru"
version = "0.1.0"
description = ""
authors = ["Yuri Baburov <burchik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.5.0"
spacy = "^2.0"
pymorphy2 = "^0.8"
notebook = "^5.6"
pandas = "^0.23.4"
hug = "^2.4"
hug-middleware-cors = "^1.0"
waitress = "^1.1"
plac = "^0.9.6"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
ipython = "^6.5"
#spacy = { git = "https://github.com/buriy/spaCy.git", branch = "master" }
#cupy = "^4.3"
cupy-cuda91 = "^4.3"
